GNOME Bugzilla – Bug 791728
settings-widget: Stop spinner when it becomes invisible
Last modified: 2018-02-22 11:53:13 UTC
Just a tiny correctness fix.
Created attachment 365681 [details] [review] settings-widget: Stop spinner when it becomes invisible This looks like a simple typo where the spinner should be stopped when becoming invisible. Note that this never caused any issue as the spinner is not visible anyway.
Review of attachment 365681 [details] [review]: Oops!
Pushed to master and gnome-3-26.