settings-widget: Stop spinner when it becomes invisible

This looks like a simple typo where the spinner should be stopped when
becoming invisible. Note that this never caused any issue as the spinner
is not visible anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=791728